--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
         "walk",
         "visit"
     ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/0phoff/unist-util-walker"
+    },
+    "bugs": "https://github.com/0phoff/unist-util-walker/issues",
     "type": "module",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
