Updated workflows: do not run main on version tags

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: main
 on:
-  - pull_request
-  - push
+  pull_request:
+  push:
+    tags-ignore:
+      - 'v*'
+
 jobs:
   small:
     name: test / ${{matrix.os}} / ${{matrix.node}}
