Further refined when to run main workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,11 @@ on:
       - '**'
     tags-ignore:
       - 'v*'
+    paths:
+      - 'src/**'
+      - 'test/**'
+      - 'tsconfig.json'
+      - 'pnpm-lock.yaml'
 
 jobs:
   small:
